# midi-thingamabob

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini  plan.md
.github/workflows/: build.yml
platform/android/: build.gradle  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/midieditor/app/: MainActivity.java
platform/ios/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
src/: app.cpp  app.h  main.cpp
src/midi/: audio_synth.cpp  audio_synth.h  general_midi.h  midi_file.cpp  midi_file.h  midi_player.cpp  midi_player.h  types.cpp  types.h
src/mobile/: file_ops_mobile.cpp  file_ops_mobile.h  main_mobile.cpp  mobile_app.cpp  mobile_app.h  piano_roll_mobile.cpp  piano_roll_mobile.h  settings_screen.cpp  settings_screen.h  swipe_nav.cpp  swipe_nav.h  toolbar_mobile.cpp  toolbar_mobile.h  touch_input.cpp  touch_input.h  track_panel_mobile.cpp  track_panel_mobile.h
src/ui/: main_window.cpp  main_window.h  piano_roll.cpp  piano_roll.h  toolbar.cpp  toolbar.h  track_panel.cpp  track_panel.h
